# AutoEngine

./: .gitignore
ConfigBackend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
ConfigBackend/alembic/: env.py
ConfigBackend/alembic/versions/: 2023_09_13_2250-65634a08248a_add_start_block_and_workflow_block.py
ConfigBackend/configbackend/: main.py
ConfigBackend/configbackend/core/: database.py  settings.py
ConfigBackend/configbackend/domains/policy/adapters/: orm.py
ConfigBackend/configbackend/domains/policy/domain/: policy_model.py
migration-neo4j/: pyproject.toml
migration-neo4j/migration_neo4j/: __main__.py
migration-neo4j/migration_neo4j/core/: mock_repo.py
migration-neo4j/migration_neo4j/domains/file/: file_domain.py  file_repository.py
migration-neo4j/migration_neo4j/domains/folder/: folder_domain.py  folder_repository.py
migration-neo4j/migration_neo4j/domains/migration/: migration_domain.py  migration_repository.py
migration-neo4j/tests/: test_folder_and_file.py  test_migration.py
