[tool.poetry]
name = "configbackend"
version = "0.1.0"
description = ""
authors = ["Aristeu <aristeuneto13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
gunicorn = "^21.2.0"
uvicorn = { extras = ["standard"], version = "^0.23.2" }
pydantic = { extras = ["settings"], version = "^2.3.0" }
migration-neo4j = {path = "../migration-neo4j"}


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
